--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-**/**/.terraform/
-**/**/terraform.*
+# Local .terraform directories
+**/.terraform/*
+# .tfstate files
+**/*.tfstate
+**/*.tfstate.*
